force-app/main/default/objects/Work_Order_Job__c/Work_Order_Job__c.object-meta.xml
<CustomObject>
    <label>Work Order Job</label>
    <nameField>
        <displayFormat>JOB-{000}</displayFormat>
        <label>Work Order Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>