force-app/main/default/objects/Work_Order_Job__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Order Jobs</relationshipLabel>
    <relationshipName>Work_Order_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>