force-app/main/default/objects/Work_Order_Job__c/fields/Balance_Due1__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due1__c</fullName>
    <formula>Total_Amount_Job__c - TotalPaid1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>