force-app/main/default/objects/Work_Order_Job__c/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <label>Customer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>