force-app/main/default/objects/Work_Order_Job__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Work Order Jobs</relationshipLabel>
    <relationshipName>Work_Order_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>