force-app/main/default/objects/Work_Order_Job__c/fields/Job_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Completed_Date__c</fullName>
    <label>Job Completed Date</label>
    <type>Date</type>
</CustomField>