force-app/main/default/objects/Work_Order_Job__c/fields/Job_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_Completed_Date_Time__c</fullName>
    <label>Job Completed Date Time</label>
    <type>DateTime</type>
</CustomField>