force-app/main/default/objects/Work_Order_Job__c/fields/Misc_Charge_2__c.field-meta.xml
<CustomField>
    <fullName>Misc_Charge_2__c</fullName>
    <label>Misc Charge 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>