force-app/main/default/objects/Work_Order_Job__c/fields/Misc_Description_2__c.field-meta.xml
<CustomField>
    <fullName>Misc_Description_2__c</fullName>
    <label>Misc Description 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>