force-app/main/default/objects/Work_Order_Job__c/fields/No_of_Labors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Labors__c</fullName>
    <label>No of Labor Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>