force-app/main/default/objects/Work_Order_Job__c/fields/No_of_Parts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Parts__c</fullName>
    <label>No of Parts</label>
    <summaryForeignKey>Work_Order_Job_Line_Item__c.Related_to_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>