force-app/main/default/objects/Work_Order_Job__c/fields/Number_of_Hours_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_Allowed__c</fullName>
    <formula>No_of_Labors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hours Allowed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>