force-app/main/default/objects/Work_Order_Job__c/fields/Price_per_Labor__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Labor__c</fullName>
    <label>Price per Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>