force-app/main/default/objects/Work_Order_Job__c/fields/Shop_Supplies_Total__c.field-meta.xml
<CustomField>
    <fullName>Shop_Supplies_Total__c</fullName>
    <label>Shop Supplies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>