force-app/main/default/objects/Work_Order_Job__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <formula>TEXT( Work_Order_Warranty_Work_Order__r.Store_Location__c )</formula>
    <label>Store Location</label>
    <type>Text</type>
</CustomField>