force-app/main/default/objects/Work_Order_Job__c/fields/Tech_Eff_Job_wise__c.field-meta.xml
<CustomField>
    <fullName>Tech_Eff_Job_wise__c</fullName>
    <formula>Number_of_Hours_Allowed__c /  Technician_Timesheet__r.Working_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Eff Job wise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>