force-app/main/default/objects/Work_Order_Job__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Order_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>