force-app/main/default/objects/Work_Order_Job__c/fields/Technician_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Technician_Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician Timesheet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Time_Management__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Standard Time Sheet</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Time_Management__c</referenceTo>
    <relationshipLabel>Work Order Jobs</relationshipLabel>
    <relationshipName>Work_Order_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>