force-app/main/default/objects/Work_Order_Job__c/fields/Total_Amount_on_Parts_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_on_Parts_del__c</fullName>
    <label>Total Amount on Parts</label>
    <summarizedField>Work_Order_Job_Line_Item__c.Total__c</summarizedField>
    <summaryForeignKey>Work_Order_Job_Line_Item__c.Related_to_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>