force-app/main/default/objects/Work_Order_Job__c/fields/Total_Amt_No_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_No_Shipping__c</fullName>
    <formula>if( Work_Order_Warranty_Work_Order__r.RecordType.DeveloperName == &apos;Work_Order&apos;, 

IF(Discount__c &lt;= (Total_Amount_on_Parts_del__c + Total_Cost_Labor__c + Shop_Supplies_Total__c + Total_Misc__c), 
(Total_Amount_on_Parts_del__c + Total_Cost_Labor__c + Shop_Supplies_Total__c + Total_Misc__c) - Discount__c , 
Total_Amount_on_Parts_del__c + Total_Cost_Labor__c + Shop_Supplies_Total__c + Total_Misc__c), 

IF(Discount__c &lt;= (Total_Part_Cost__c + Total_Cost_Labor__c + Shop_Supplies_Total__c + Total_Misc__c), 
(Total_Part_Cost__c + Total_Cost_Labor__c + Shop_Supplies_Total__c + Total_Misc__c) - Discount__c , 
Total_Part_Cost__c + Total_Cost_Labor__c + Shop_Supplies_Total__c + Total_Misc__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amt No Shipping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>