force-app/main/default/objects/Work_Order_Job__c/fields/Total_Cost_Labor__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Labor__c</fullName>
    <formula>No_of_Labors__c * Price_per_Labor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>