force-app/main/default/objects/Work_Order_Job__c/fields/Total_Hours_Job__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Job__c</fullName>
    <label>Hours Allowed for Job</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>