force-app/main/default/objects/Work_Order_Job__c/fields/Total_Misc__c.field-meta.xml
<CustomField>
    <fullName>Total_Misc__c</fullName>
    <formula>Misc_Charge__c +  Misc_Charge_2__c +  Misc_Charge_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Misc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>