force-app/main/default/objects/Work_Order_Job__c/fields/Total_Part_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Part_Cost__c</fullName>
    <label>Total Part Cost</label>
    <summarizedField>Work_Order_Job_Line_Item__c.Total_Dealer_Price__c</summarizedField>
    <summaryForeignKey>Work_Order_Job_Line_Item__c.Related_to_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>