force-app/main/default/objects/Work_Order_Job__c/fields/TWO_Worked_Hour__c.field-meta.xml
<CustomField>
    <fullName>TWO_Worked_Hour__c</fullName>
    <label>TWO Worked Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>