force-app/main/default/objects/Work_Order_Job__c/fields/Unique_Job_id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Job_id__c</fullName>
    <externalId>true</externalId>
    <label>Unique_Job_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>