force-app/main/default/objects/Work_Order_Job__c/fields/Work_Order_Warranty_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Warranty_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order/Warranty Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Work Order Jobs</relationshipLabel>
    <relationshipName>Work_Order_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>