force-app/main/default/objects/Work_Order_Job__c/recordTypes/Canned_Job.recordType-meta.xml
<RecordType>
    <fullName>Canned_Job</fullName>
    <active>true</active>
    <label>Canned Job</label>
</RecordType>