force-app/main/default/objects/Work_Order_Job__c/recordTypes/WO_Job.recordType-meta.xml
<RecordType>
    <fullName>WO_Job</fullName>
    <active>true</active>
    <label>Work Order Job</label>
</RecordType>