force-app/main/default/objects/Work_Order_Job__c/listViews/Canned_Job.listView-meta.xml
<ListView>
    <fullName>Canned_Job</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Work_Order_Job__c.Canned_Job</value>
    </filters>
    <label>Canned Job</label>
</ListView>